--- a/Pages/about.html
+++ b/Pages/about.html
@@ -3,11 +3,9 @@
 <html lang="en">
 
 <head>
-  <!-- meta tags -->
+  <!-- meta tags and meta data-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- metadata -->
   <title>GreenLiving Store — About Us</title>
   <meta name="description" content="Team portfolios: skills, education, volunteering, certifications, and experience.">
   <meta name="author" content="Student Group">
@@ -27,7 +25,6 @@
 
       <nav aria-label="Primary">
         <ul>
-          <!-- data-page helps JavaScript highlight the current page -->
           <li><a href="index.html" data-page="index.html">Home</a></li>
           <li><a href="products.html" data-page="products.html">Products</a></li>
           <li><a href="blog.html" data-page="blog.html">Blog</a></li>
@@ -54,7 +51,6 @@
 
     <!--internal css-->
     <style>
-      /* About page: portfolio images as circles for a clean look */
       .pfp {
         width: 110px;
         height: 110px;
