--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -24,7 +24,6 @@
 
       <nav aria-label="Primary">
         <ul>
-          <!-- data-page helps JavaScript highlight the current page -->
           <li><a href="index.html" data-page="index.html">Home</a></li>
           <li><a href="products.html" data-page="products.html">Products</a></li>
           <li><a href="blog.html" data-page="blog.html">Blog</a></li>
@@ -32,7 +31,7 @@
           <li><a href="about.html" data-page="about.html">About Us</a></li>
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
-          <!-- cart badge show dynamic JavaScript behavior -->
+          <!-- cart badge -->
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
@@ -110,7 +109,7 @@
     </div>
   </footer>
 
-  <!-- External JavaScript -->
+  <!-- external js -->
   <script src="../js/main.js"></script>
 </body>
 </html>
