--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- meta tags -->
+  <!-- meta tags and metadata-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- metadata -->
   <title>GreenLiving Store — Contact</title>
   <meta name="description" content="Contact us form with JavaScript validation.">
   <meta name="author" content="Student Group">
@@ -60,7 +58,7 @@
       ✅ Thank you! Your message was validated and submitted in this demo.
     </div>
        
-    <!-- Required HTML tag: form (with proper nesting, labels, inputs, textarea) -->
+    <!-- required html tags -->
     <section class="card">
       <h2>Send us a message</h2>
       <form id="contactForm" novalidate>
