--- a/Pages/research.html
+++ b/Pages/research.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- meta tags -->
+  <!-- meta tags and metadata -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- metadata -->
   <title>GreenLiving Store — Research</title>
   <meta name="description" content="Research section contrasting your website components against researched websites.">
   <meta name="author" content="Student Group">
@@ -49,9 +47,9 @@
       The focus is on “peculiar” components that other sites have more than others (e.g., advanced search, reviews, animations).
     </p>
 
-    <!-- Internal CSS -->
+    <!-- internal css -->
     <style>
-      /* Research page: make reference links stand out */
+      /* this makes reference links stand out */
       .refs a { word-break: break-word; }
       .pill { display:inline-block; padding:0.2rem 0.55rem; border-radius:999px; border:1px solid #e5e7eb; font-size:0.85rem; }
     </style>
