--- a/Pages/products.html
+++ b/Pages/products.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- meta tags -->
+  <!-- meta tags and metadata-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- metadata -->
   <title>GreenLiving Store — Products</title>
   <meta name="description" content="Browse sustainable lifestyle products with prices, discounts, and details.">
   <meta name="author" content="Student Group">
@@ -79,7 +77,7 @@
         </p>
         <ul class="muted">
           <li>Material: bamboo handle</li>
-          <li>Recommended replacement: every 2–3 months</li>
+          <li>Recommended replacement: every 2-3 months</li>
           <li>Packaging: recycled cardboard</li>
         </ul>
         <div class="product-actions">
